--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,15 @@ plugins {
 
 android {
     compileSdk 32
+    def appVersionName =  (System.getenv("APP_VERSION_NUMBER") as String) ?: "1.1"
+    def appVersionCode =  rootProject.properties.get("BUILD_NUMBER") as Integer
 
     defaultConfig {
         applicationId "com.myratech.firebasertdapplication"
         minSdk 23
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        versionCode appVersionCode ?: 21
+        versionName appVersionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
