--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,12 @@ android {
     productFlavors {
         dev {
             dimension "version"
-            applicationIdSuffix ".dev"
+//            applicationIdSuffix ".dev"
             resValue "string", "app_name", "Dev FirebaseRTDApplication"
         }
         qa {
             dimension "version"
-            applicationIdSuffix ".qa"
+//            applicationIdSuffix ".qa"
             resValue "string", "app_name", "QA FirebaseRTDApplication"
         }
         production {
