--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,28 +5,25 @@ plugins {
     id 'com.google.firebase.crashlytics'
 }
 
+def getDate() {
+    def date = new Date()
+    def formattedDate = date.format('dd_MM_yy')
+    return formattedDate
+}
+
 android {
     compileSdk 32
-    def appVersionName =  (System.getenv("APP_VERSION_NUMBER") as String) ?: "1.1"
-    def appVersionCode =  rootProject.properties.get("BUILD_NUMBER") as Integer
+//    def appVersionName = (System.getenv("APP_VERSION_NUMBER") as String) ?: "1.1"
+//    def appVersionCode = rootProject.properties.get("BUILD_NUMBER") as Integer
 
     defaultConfig {
         applicationId "com.myratech.firebasertdapplication"
         minSdk 23
         targetSdk 32
-        versionCode appVersionCode ?: 21
-        versionName appVersionName
-
+        versionCode 2
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
     flavorDimensions "version"
     productFlavors {
         dev {
@@ -44,7 +41,34 @@ android {
             resValue "string", "app_name", "FirebaseRTDApplication"
         }
     }
-
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        android.applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                def fileFormat = "FirebaseRTDApplication"
+                if (productFlavors.name.contains("dev")) {
+                    fileFormat = fileFormat + "_Dev"
+                } else if (productFlavors.name.contains("qa")) {
+                    fileFormat = fileFormat + "_QA"
+                } else {
+                    fileFormat = fileFormat + "_PD"
+                }
+                fileFormat = fileFormat + "_VC_" + "${defaultConfig.versionCode}"
+                fileFormat = fileFormat + "_VN_" + defaultConfig.versionName
+                fileFormat = fileFormat + "_" + getDate()
+                if (variant.buildType.name == "release") {
+                    fileFormat += "_release.apk"
+                } else {
+                    fileFormat += ".apk"
+                }
+                output.outputFileName = fileFormat
+//                println(outputFileName)
+            }
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
