--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,10 @@ android {
         applicationId "com.myratech.firebasertdapplication"
         minSdk 23
         targetSdk 32
-        versionCode appVersionCode
-        versionName appVersionName
+//        versionCode appVersionCode
+        versionCode 33
+//        versionName appVersionName
+        versionName "1.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     flavorDimensions "version"
