--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,17 +13,15 @@ def getDate() {
 
 android {
     compileSdk 32
-    def appVersionName = (System.getenv("APP_VERSION_NUMBER") as String) ?: "1.1"
-    def appVersionCode = System.getenv("BUILD_NUMBER") as Integer ?: 420
+    def appVersionName = (System.getenv("APP_VERSION_NUMBER") as String) ?: "1.3"
+    def appVersionCode = System.getenv("APP_VERSION_CODE") as Integer ?: 33
 
     defaultConfig {
         applicationId "com.myratech.firebasertdapplication"
         minSdk 23
         targetSdk 32
-//        versionCode appVersionCode
-        versionCode 33
-//        versionName appVersionName
-        versionName "1.3"
+      versionCode appVersionCode
+      versionName appVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     flavorDimensions "version"
